v1.0.11, unreleased
- Added parameter to set the content type in reply() and comment() (#12).
- Added parameter Format to search() (#17).
- Tests: Update to new demo instance, fixing tests.
- Tests: Disable tests in Travis, the existing test instance closed the REST interface (#28).

v1.0.10, 2017-02-22
- PEP8 fixes
- update .travis.yml to update python interpreter list and some other small changes
- prefer format over % (PEP 3101)
- Add patch from https://gitlab.labs.nic.cz/labs/python-rt/issues/9
  "Support CF search where special chars or spaces in CF names"
- Implement a fix for the issue suggested in
  https://gitlab.labs.nic.cz/labs/python-rt/issues/10 (can't create ticket
  with multi-line message)
- Implement fix for https://gitlab.labs.nic.cz/labs/python-rt/issues/7
  "returned types inconsistent in get_ticket"
  Add splitting for Cc and AdminCc

v1.0.9, 2016-06-22
- added ability to steal, untake, and explicitly take tickets
- fixed create_ticket return value when provided an invalid custom field

v1.0.8, 2014-05-29
- added ability to search all queues
- added RtError super class
- fixed compatibility issues with Python 2.6

v1.0.7, 2013-10-01
- unit tests
- own exceptions
- added create_user, create_queue, edit_user, edit_queue methods
- added edit_link (replaces buggy edit_ticket_links)
- added get_attachments, get_short_history methods
- support merge_ticket in RT4
- custom query to search method
- strict binary handling with attachments

v1.0.6, 2013-09-05
- added support for HTTP basic and digest authentication
- specification of errors to different exceptions

v1.0.5, 2013-04-26
- fixed decoding of utf-8 only when needed
- updated search function to support various
  lookup operators and sorting

v1.0.4, 2013-03-21
- default queue added to init parameters

v1.0.3, 2013-03-06
- python-requests 1.x compatible

v1.0.2, 2013-02-18
- HTTP proxy support
- Support for multilinks in get_links

v1.0.1, 2013-01-10
- Updated docstrings